--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site
 name: 'ㅍㄱㄴㅌ'
-description: 'Mundana is a free Jekyll theme for awesome people like you, Medium like.'
+description: '파랑의 노트들'
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
-baseurl: ''
+baseurl: '/'
 disqus: 'demowebsite'
 email: 'wowthemesnet@gmail.com'
 mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
