--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-name: 'ㅍㄱㄴㅌ'
+name: 'PARANG NOTES'
 description: '파랑의 노트들'
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
